Connection to mongoDB with environment variables

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 DB_HOST=localhost
 DB_PORT=27017
 DB_NAME=reservationDB
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
-API_KEY=your_sendgrid_api_key
+DB_USERNAME=DB_USERNAME
+DB_PASSWORD=DB_PASSWORD
+DB_CLUSTER=DB_CLUSTER
+MAILJET_API_KEY=MAILJET_API_KEY
+MAILJET_SECRET_KEY=MAILJET_SECRET_KEY
