--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "node-mailjet": "^6.0.4",
     "swagger-jsdoc": "^6.2.8",
