edited vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,19 @@
 {
   "version": 2,
-
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server.js"
+      "dest": "/routes.js"
     },
     {
       "src": "/swagger/(.*)",
-      "dest": "/server.js"
+      "dest": "/routes.js"
     },
     {
       "src": "/",
