--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,26 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/routes.js"
     },
     {
-      "src": "/swagger/(.*)",
-      "dest": "/routes.js"
+      "src": "/swagger-ui/(.*)",
+      "dest": "/node_modules/swagger-ui-dist/$1"
     },
     {
-      "src": "/",
+      "src": "/api-docs",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/server.js"
     }
   ]
