--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "version": 2,
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/api-docs/(.*)", "dest": "/api-docs/$1" },
-    { "src": "/(.*)", "dest": "/" }
-  ]
+  "rewrites": [{"source": "(.*)", "destination": "/api"}]
 }
