--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,26 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "src/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/src/api"
+      "src": "/api/(.*)",
+      "dest": "src/index.js"
+    },
+    {
+      "src": "/api-docs",
+      "dest": "src/index.js"
     }
-  ]
+  ],
+  "env": {
+    "MONGODB_URI": "@mongodb_uri"
+  },
+  "build": {
+    "env": {
+      "MONGODB_URI": "@mongodb_uri"
+    }
+  }
 }
