trying to make swagger work on the deployment platform

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1" },
-    {
-      "src": "/swagger",
-      "dest": "/swagger" }
+    { "src": "/api/(.*)", "dest": "/src/$1" },
+    { "src": "/swagger", "dest": "/src/swagger" }
 
   ]
 
