--- a/package.json
+++ b/package.json
@@ -22,14 +22,26 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "4.6.3"
   },
+  "scripts": {
+    "dev": "nodemon --exec babel-node src/index.js",
+    "build": "babel src -d dist",
+    "start": "node dist/index.js",
+    "both-dev": "concurrently \"npm run dev\" \"npm --prefix ../client/ run dev\""
+  },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.6",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.22"
   },
   "private": true
 }
